@@ -1,3 +1,8 @@
+2007-11-24  Jerome Rapinat <romjerome@yahoo.fr>
+	* src/DataViews/_PersonView.py: TransUtils issue with gettext context 
+        * src/glade/gramps.glade: Inconsistent label in "Associations", issue #1390
+        * src/TipOfDay.py: display bold tags, issue #1368
+
 2007-11-23 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/plugins/rel_nl.py: new half sibling types
 	* src/plugins/rel_it.py: new half sibling types
